--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,88 @@
+body {
+    background: url('/static/ok.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: Arial, sans-serif;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* 50% Black Overlay */
+    z-index: -1;
+}
+
+
+.container {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+}
+
+
+
+button {
+    padding: 10px;
+    margin: 10px;
+    font-size: 16px;
+}
+
+.results {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Grid layout */
+    gap: 20px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.movie {
+    text-align: center;
+}
+
+.movie img {
+    width: 150px;
+    border-radius: 8px;
+}
+
+.movie img:hover {
+    transform: scale(1.1);
+
+}
+
+select {
+    width: 55%;
+    padding: 12px 0px !important;
+    font-size: 15px;
+    border-radius: 10px;  /* Rounded edges */
+    border: 2px solid #0062ff; /* Green border like Spotify */
+    background-color: #222; /* Dark background */
+    color: white;
+    outline: none;
+    text-align: center;
+}
+
+button {
+    padding: 12px 20px;
+    font-size: 15px;
+    border-radius: 10px; /* Rounded edges */
+    border: none;
+    background-color:#0062ff; /* Green button */
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+h1 {
+    font-weight: bold;
+    color: white;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    position: relative;
+}
 
