--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,14 @@
         <form method="POST">
             <select name="movie_name">
                 {% for movie in movie_list %}
-                    <option value="{{ movie }}">{{ movie }}</option>
+                    <option value="{{ movie }}" {% if movie == selected_movie %}selected{% endif %}>
+                        {{ movie }}
+                    </option>
                 {% endfor %}
             </select>
             <button type="submit">Show Recommendations</button>
         </form>
+
 
         <div class="results">
             {% for movie, poster in recommendations %}
